// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders different modal sections 1`] = `
<h4
  class="sc-ifAKCX fBKnDt sc-htpNat kauQMr"
  id="abcdef"
>
  Header
</h4>
`;

exports[`renders different modal sections 2`] = `
<div
  class="sc-bZQynM eVbtnu"
>
  Body
</div>
`;

exports[`renders different modal sections 3`] = `
<div
  class="sc-gzVnrw ilnIUq"
>
  Footer
</div>
`;
